# cmake_cpp_modules_example

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  module_a.cppm  module_b.cppm
